2000-04-01  Alexandre Oliva  <aoliva@cygnus.com>

	* gas/mn10300/am33_5.s: Check that negative SP offsets are encoded
	with 32 bits, not with the unsigned shorter opcodes.
	* gas/mn10300/basic.exp: Likewise.

2000-03-31  Alexandre Oliva  <aoliva@cygnus.com>

	* lib/gas-defs.exp (regexp_diff): Don't break on the first
	difference, list them all.

2000-03-29  Nick Clifton <nickc@cygnus.com

	* gas/arm/thumb.s: Add test of bal instruction.

2000-03-27  Alan Modra  <alan@linuxcare.com.au>

	* gas/ieee-fp/x930509a.exp (dotest): Fix test for
	LISTING_WORD_SIZE==1.
	* gas/all/gas.exp (do_930509a): Same here.
	* gas/all/cond.d: And here.

2000-03-16  Nick Clifton  <nickc@cygnus.com>

	* gas/arm/arm.exp: Run branch.s test.
	Run tests if target is strongarm.

	* gas/arm/branch.s: New test.  Make sure that assembler can handle
	same-section branch relocations properly.

	* gas/arm/branch.d: New file.  Expected output from assembling
	branch.s.

2000-03-10  Geoffrey Keating  <geoffk@cygnus.com>

	* gas/mips/empic.d: New file.
	* gas/mips/empic.s: New file.
	* gas/mips/mips16-e.d: New file.
	* gas/mips/mips16-e.s: New file.
	* gas/mips/mips16-f.d: New file.
	* gas/mips/mips16-f.s: New file.
	* gas/mips/mips.exp: Add empic, mips16-e.  Add mips16-f as an
	expected failure.

2000-02-25  H.J. Lu <hjl@gnu.org>

	* gas/i386/general.l: Support a.out and coff.

2000-02-25  Alan Modra  <alan@spri.levels.unisa.edu.au>

	* gas/i386/intel.s: New file, intel version of opcode.s
	* gas/i386/intel.d: New file, copy of opcode.d
	* gas/i386/i386.exp: Call it.

	* gas/i386/general.s: Add extra "out" instructions.
	* gas/i386/general.l: Likewise.

2000-01-31  Nick Clifton  <nickc@cygnus.com>

	* gas/arm/inst.s: Include test of ATPCS register naming
	conventions.

	* gas/arm/float.s: Include test of ATPCS register naming
	conventions.

Fri Jan 21 12:48:06 2000  H.J. Lu <hjl@gnu.org>

	* gas/i386/general.l: Support a.out.
	* gas/i386/jump.d: Likewise.
	* gas/i386/jump16.d: Likewise.
