@@ -1,5 +1,34 @@
 .psize 0
 .text
+#test jumps and calls
+1:	jmp	1b
+	jmp	xxx
+	jmp	*xxx
+	jmp	xxx(,1)
+	jmp	*%edi
+	jmp	%edi
+	jmp	*(%edi)
+	jmp	(%edi)
+	ljmp	*xxx(,%edi,4)
+	ljmp	xxx(,%edi,4)
+	ljmp	*xxx
+	ljmp	xxx(,1)
+	ljmp	$0x1234,$xxx
+
+	call	1b
+	call	xxx
+	call	*xxx
+	call	xxx(,1)
+	call	*%edi
+	call	%edi
+	call	*(%edi)
+	call	(%edi)
+	lcall	*xxx(,%edi,4)
+	lcall	xxx(,%edi,4)
+	lcall	*xxx
+	lcall	xxx(,1)
+	lcall	$0x1234,$xxx
+
 # test various segment reg insns
 	push	%ds
 	pushl	%ds
@@ -161,6 +190,19 @@
 	mov	%esi,(,%ebx,1)
 	andb	$~0x80,foo
 
+	and	$0xfffe,%ax
+	and	$0xff00,%ax
+	and	$0xfffe,%eax
+	and	$0xff00,%eax
+	and	$0xfffffffe,%eax
+
+.code16
+	and	$0xfffe,%ax
+	and	$0xff00,%ax
+	and	$0xfffe,%eax
+	and	$0xff00,%eax
+	and	$0xfffffffe,%eax
+
 #check 16-bit code auto address prefix
 .code16gcc
 	leal	-256(%ebp),%edx
@@ -168,35 +210,6 @@
 	mov	%ah,-128(%ebp)
 	leal	-1760(%ebp),%ebx
 	movl	%eax,140(%esp)
-
-.code32
-	jmp	1b
-	jmp	xxx
-	jmp	*xxx
-	jmp	xxx(,1)
-	jmp	*%edi
-	jmp	%edi
-	jmp	*(%edi)
-	jmp	(%edi)
-	ljmp	*xxx(,%edi,4)
-	ljmp	xxx(,%edi,4)
-	ljmp	*xxx
-	ljmp	xxx(,1)
-	ljmp	$0x1234,$xxx
-
-	call	1b
-	call	xxx
-	call	*xxx
-	call	xxx(,1)
-	call	*%edi
-	call	%edi
-	call	*(%edi)
-	call	(%edi)
-	lcall	*xxx(,%edi,4)
-	lcall	xxx(,%edi,4)
-	lcall	*xxx
-	lcall	xxx(,1)
-	lcall	$0x1234,$xxx
 
 	# Force a good alignment.
 	.p2align	4,0
